# probabilistic-data-integration

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml  mock_data.yaml  package-lock.json  package.json  schema.json
example_configs/food/: config.yaml  food_1.yaml  food_2.yaml  open_food_facts.py  requirements.txt  run.sh
example_sources/: open_food_facts.py
mock_data/: food_1.yaml  food_2.yaml
protos/: datasource.proto
src/: datasource.rs  datasources.rs  generate_json_schema.rs  graphql.rs  http.rs  lib.rs  main.rs  numeric.rs  search_engine.rs  search_engine_config.rs  search_result.rs  string.rs
src/datasources/: grpc_datasource.rs  mock_datasource.rs  openFoodFacts.rs  open_food_facts.rs  rest_datasource.rs
src/datasources/openFoodFacts/: generate_sdk.sh  schema_v2.json
src/datasources/open_food_facts/: schema.json  schema_inlined.json  schema_v2.json
