[package]
name = "tag-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peroxide = "0.32.1"

openapi={path="./src/datasources/open_food_facts/rust_api"}
async-trait = "0.1.58"
futures = "0.3.25"
tokio = { version = "1", features = ["full"] }
fuzzy-matcher = "0.3.7"
tonic = "0.8.3"
prost = "0.11.6"
config = "0.13.1"
clap = { version = "4.1.1", features = ["derive"] }
serde = "1.0.152"
async-graphql = {version="5.0.5", features=["dynamic-schema"]}
poem = "1.3.52"
async-graphql-poem = "5.0.5"
lazy_static = "1.4.0"
poem-openapi = "2.0.25"

[build-dependencies]
tonic-build = "0.8.4"
